# wikipedia_mobile

./: .env.bstack  .env.device  .env.emulator  .gitignore  config.py  pyproject.toml  pytest.ini
tests/: conftest.py
tests/android_app/: conftest.py  test_search.py
tests/mobile_app/: test_search.py
wikipedia/helpers/: attach.py  resource.py
wikipedia/pages/: wikipedia_app.py
